--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,175 @@
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  background-color:#fff;
+
+body {
+  background-color: #e8cebf;
   font-family: 'Lato', sans-serif;
 }
+
+#main {
+  margin-bottom: 20px;
+}
+
+#main h2 {
+  color: #266150;
+  letter-spacing: 0.8px;
+  font-weight: bold;
+}
+
 #title {
   text-align: center;
   font-size: 2.5rem;
   text-transform: uppercase;
   padding: 20px;
   letter-spacing: 1.4px;
-  color:#000;
-  font-weight:800 ;
+  color: #4f4846;
+  font-weight: 800;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
 }
-#title::before,#title::after{
+
+#title::before, #title::after {
   content: "";
   display: block;
-  background: linear-gradient(to right,#ccc,transparent);
+  background: linear-gradient(to right, #4f4846, #266150, transparent);
   height: 15px;
 }
-#title::after{
-  background:linear-gradient(to left,#ccc,transparent);
+
+#title::after {
+  background: linear-gradient(to left, #4f4846, #266150, transparent);
 }
 
+img {
 
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+}
 
-#img-div{
+.wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background-color: #ccc;
-  max-width: 80vw;
-  margin:20px auto;
-  padding: 20px 10px;
+  justify-content: center;
+  margin: auto;
+  background: repeating-linear-gradient(35deg, #fdf8f5, #e8cebf 10%, #ddaf94 10%);
+  height: auto;
+  width: 100vw;
+  padding: 30px 20px 10px 20px;
 }
-#image {
-  max-width: 100%;
-  height:auto;
-  padding: 20px 10px;
+
+/* Slideshow container */
+.slideshow-container {
+  width: 50vw;
+  height: auto;
+  position: relative;
+  margin: auto;
+  box-shadow: 15px 10px 15px #ddaf94, -15px -10px 15px #e8cebf;
 }
-#img-caption{
-  padding: 10px ;
-  text-transform: capitalize;
-  font-size: 1.5rem;
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
-#tribute-info{
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #266150;
+  background: #e8cebf;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+#tribute-info {
   max-width: 70vw;
   display: flex;
   flex-direction: column;
@@ -61,33 +178,40 @@ body{
   margin: 30px auto;
   text-align: center;
 }
+
 #tribute-info h2 {
   margin-bottom: 20px;
   letter-spacing: 1.5px;
+  background: #4f4846;
+  padding: 8px 15px;
+  color: #fdf8f5;
 }
 
 #tribute-info ul li p {
-  margin-top:20px;
+  margin-top: 20px;
   font-size: 1.3rem;
   margin-left: 20px;
   padding: 5px;
   letter-spacing: 1px;
   font-weight: 600;
-
 }
+
 #tribute-info span {
   font-weight: bold;
-  font-style:italic ;
+  font-style: italic;
   font-size: 1.5rem;
 }
-#tribute-info ul li{
-  display:flex;
+
+#tribute-info ul li {
+  display: flex;
   align-items: center;
 }
+
 .quotes {
   margin-top: 30px;
   padding: 30px;
 }
+
 .quotes-header {
   font-size: 1.5rem;
   letter-spacing: 1.3px;
@@ -98,37 +222,42 @@ body{
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
 }
-.quotes-header::before,.quotes-header::after{
+
+.quotes-header::before, .quotes-header::after {
   content: "";
   display: block;
   height: 10px;
-  background: linear-gradient(to right,#000,transparent);
-  }
-
-.quotes-header::after{
-  background: linear-gradient(to left,#000,transparent);
+  background: linear-gradient(to right, #266150, transparent);
 }
+
+.quotes-header::after {
+  background: linear-gradient(to left, #266150, transparent);
+}
+
 .quotes p {
   font-weight: 700;
-  background-color: #ccc;
+  background: linear-gradient(#266150, transparent);
   padding: 20px 5px;
   font-size: 1.2rem;
   margin-bottom: 10px;
   letter-spacing: 1px;
+  color: #fdf8f5;
 }
 
-footer{
+footer {
   text-align: center;
   font-size: 1.2rem;
   letter-spacing: 1px;
   padding: 10px;
   margin-bottom: 10px;
 }
+
 footer a {
   color: #000;
   text-decoration: none;
   font-weight: 800;
 }
+
 footer a:hover {
   color: #fff;
   background: #ccc;
